# Inertia

./: .gitignore  CMakeLists.txt
src/: Execution.c  Execution.h  Instr_set.c  Instr_set.h  RegMem.c  RegMem.h  a.out  ecall.c  ecall.h  main.c
